--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "lerna": "2.0.0-beta.38"
+    "chai": "^3.5.0",
+    "lerna": "2.0.0-beta.38",
+    "mocha": "^3.2.0",
+    "sinon": "^2.1.0"
   }
 }
