--- a/packages/starpack/package.json
+++ b/packages/starpack/package.json
@@ -1,26 +1,16 @@
 {
   "name": "starpack",
-  "version": "0.1.3",
-  "description": "Starpack is a minimalistic build system for isomorphic ECMA >6 applications",
-  "repository": "westtrade/starpack",
-  "author": "Popov Gennadiy <me@westtrade.tk>   ",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/westtrade/starpack/issues"
+  "version": "1.0.0",
+  "description": "Starpack application instances configurator",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": {
-    "starpack": "./bin/starpack"
-  },
-  "dependencies": {
-    "babel-core": "^6.22.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-backpack": "^0.0.9",
-    "cross-spawn": "^5.0.1",
-    "friendly-errors-webpack-plugin": "^1.1.2",
-    "nodemon": "^1.11.0",
-    "ramda": "^0.23.0",
-    "source-map-support": "^0.4.11",
-    "webpack": "2.2.0-rc.3",
-    "webpack-node-externals": "^1.5.4"
-  }
+  "keywords": [
+    "starpack",
+    "webpack",
+    "bundle"
+  ],
+  "author": "Popov Gennadiy <commerce@westtrade.tk> (http://westtrade.tk/)",
+  "license": "MIT"
 }
